[package]
name = "helius-laserstream"
version = "0.2.2"
edition = "2021"
authors = ["Helius <support@helius.xyz>"]
description = "Rust client for Helius LaserStream gRPC with robust reconnection and slot tracking"
license = "MIT"
repository = "https://github.com/helius-labs/laserstream"
keywords = ["solana", "laserstream", "yellowstone", "grpc", "blockchain"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Yellowstone 12.x/13.x line: tonic 0.14 / prost 0.14 / solana 4.x, matching the
# magicblock validator workspace (agave 4.0). Only the dependencies the library
# itself uses are declared; the integration-test bins (which needed reqwest/sha2/
# bs58/serde_json) were dropped along with their deps to keep the validator's
# dependency graph free of duplicate (older) versions.
[dependencies]
yellowstone-grpc-proto = "12.5"
yellowstone-grpc-client = "13.1"
tonic = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
thiserror = "2"
futures-util = { version = "0.3", features = ["sink"] }
futures-channel = "0.3"
futures = "0.3"
async-stream = "0.3"
url = "2.5"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
